@@ -69,6 +69,9 @@ NEW FEATURES
 
     o	curve() now returns a list containing the points that were drawn.
 
+    o	spineplot() now accepts axes = FALSE, for consistency with
+	other functions called by plot.factor().
+
 
 DEPRECATED & DEFUNCT
 
